Bug Fixes
Fixed a bug that was causing articles with no thumbnail to not show the default image.
Fixed a bug that was causing extra space to show above the cms portion of the site.
Changed the text and link color in the home page footer.

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -17,5 +17,6 @@ body {
 }
 
 .appDashboard {
-  margin-top: -$appBottomPadding;
+  margin-top: -$appBottomPadding - $appTopPadding;
+
 }
