--- a/client/src/routes/home/home.sass
+++ b/client/src/routes/home/home.sass
@@ -54,8 +54,7 @@
     margin-top: 30px
     margin-bottom: -10px
     text-align: center
-    color: #efeee7
     background: #8A9E9C
 
-    p
-      margin: 0px;
+    a
+      color: #efeee7
